--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -3,5 +3,8 @@
   "about_us": "Über Uns",
   "welcome_message": "Willkommen auf meiner Website!",
   "footer_copyright": "Alle Rechte vorbehalten.",
-  "about_us_description": "Wir sind ein Unternehmen, das Innovation und Kundenzufriedenheit schätzt."
+  "about_us_description": "Wir sind ein Unternehmen, das Innovation und Kundenzufriedenheit schätzt.",
+  "solutions": "Lösungen",
+  "services": "Dienstleistungen",
+  "contact_us": "Kontaktieren Sie uns"
 }
