--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,5 +3,8 @@
   "about_us": "About Us",
   "welcome_message": "Welcome to My Website!",
   "footer_copyright": "All rights reserved.",
-  "about_us_description": "We are a company that values innovation and customer satisfaction."
+  "about_us_description": "We are a company that values innovation and customer satisfaction.",
+  "solutions": "Solutions",
+  "services": "Services",
+  "contact_us": "Contact Us"
 }
