add services in header

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,10 +1,21 @@
 {
-  "home": "Home",
   "about_us": "About Us",
-  "welcome_message": "Welcome to My Website!",
-  "footer_copyright": "All rights reserved.",
-  "about_us_description": "We are a company that values innovation and customer satisfaction.",
-  "solutions": "Solutions",
-  "services": "Services",
+  "it_consulting": "IT Consulting",
+  "from_idea_to_implementation": "From Idea to Implementation",
+  "it_strategy": "IT Strategy & Digitalization",
+  "software_consulting": "Software Consulting",
+  "it_security": "IT Security & Audits",
+  "web_development": "Web Development",
+  "wordpress": "WordPress Development",
+  "react_applications": "React Applications",
+  "angular_development": "Angular Development",
+  "e_commerce": "E-commerce Solutions",
+  "custom_software": "Custom Software",
+  "technologies_tools": "Technologies & Tools",
+  "it_services": "IT Services",
+  "full_service_it": "Full-Service IT",
+  "server_management": "Server Management",
+  "cloud_backup": "Cloud Solutions & Backup",
+  "user_support": "User Support",
   "contact_us": "Contact Us"
 }
