--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,10 +1,21 @@
 {
-  "home": "Startseite",
   "about_us": "Über Uns",
-  "welcome_message": "Willkommen auf meiner Website!",
-  "footer_copyright": "Alle Rechte vorbehalten.",
-  "about_us_description": "Wir sind ein Unternehmen, das Innovation und Kundenzufriedenheit schätzt.",
-  "solutions": "Lösungen",
-  "services": "Dienstleistungen",
-  "contact_us": "Kontaktieren Sie uns"
+  "it_consulting": "IT-Beratung",
+  "from_idea_to_implementation": "Von der Idee bis zur Umsetzung",
+  "it_strategy": "IT-Strategie & Digitalisierung",
+  "software_consulting": "Softwareberatung",
+  "it_security": "IT-Sicherheit & Audits",
+  "web_development": "Webentwicklung",
+  "wordpress": "WordPress-Entwicklung",
+  "react_applications": "React-Anwendungen",
+  "angular_development": "Angular-Entwicklung",
+  "e_commerce": "E-Commerce-Lösungen",
+  "custom_software": "Individuelle Softwarelösungen",
+  "technologies_tools": "Technologien & Tools",
+  "it_services": "IT-Services",
+  "full_service_it": "Full-Service IT",
+  "server_management": "Server-Management",
+  "cloud_backup": "Cloud-Lösungen & Backup",
+  "user_support": "Benutzerunterstützung",
+  "contact_us": "Kontakt"
 }
