add hover effects and language icons

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -6,6 +6,8 @@
     "it_services": "IT-Services",
     "contact_us": "Kontakt"
   },
+  "footer_copyright": "All rights reserved.",
+
   "it_consulting": {
     "it_consulting": "IT-Beratung",
     "from_idea_to_implementation": "Von der Idee zur Umsetzung",
