--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -6,6 +6,8 @@
     "it_services": "IT Services",
     "contact_us": "Contact Us"
   },
+  "footer_copyright": "All rights reserved.",
+
   "it_consulting": {
     "it_consulting": "IT Consulting",
     "from_idea_to_implementation": "From Idea to Implementation",
