about us page and interactive spider

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -78,5 +78,40 @@
     "content_for_cloud_backup": "Sichere Cloud-Lösungen und Backup-Services.",
     "user_support": "Benutzerunterstützung",
     "content_for_user_support": "Wir unterstützen Ihre Benutzer."
+  },
+
+  "about_us": {
+    "hero_title": "Willkommen bei Cyborg",
+    "hero_subtitle": "Innovative IT-Lösungen für Sie maßgeschneidert",
+    "who_we_are_title": "Wer wir sind",
+    "who_we_are_content": "Bei Cyborg sind wir ein zukunftsorientiertes Startup, das sich der Bereitstellung modernster IT-Lösungen verschrieben hat. Unser frischer Einstieg in die Branche befähigt uns mit innovativen Ideen und einer grenzenlosen Leidenschaft für Technologie. Wir glauben, dass wir durch unsere Neuheit einzigartige Perspektiven, agile Lösungen und persönliche Aufmerksamkeit bieten können, die etablierte Unternehmen möglicherweise übersehen.",
+    "our_mission_title": "Unsere Mission",
+    "our_mission_content": "Unsere Mission ist es, die Kluft zwischen Erschwinglichkeit und Qualität im IT-Sektor zu überbrücken. Wir streben danach, außergewöhnliche Dienstleistungen zu erbringen, die Unternehmen befähigen, im digitalen Zeitalter zu gedeihen. Durch den Einsatz der neuesten Technologien und der Genialität unseres Teams möchten wir Ihr vertrauenswürdiger Partner in Sachen Innovation werden.",
+    "our_advantage_title": "Unser Vorteil",
+    "advantage_point1": "Innovatives Denken: Wir bieten kreative Lösungen, die auf Ihre spezifischen Bedürfnisse zugeschnitten sind.",
+    "advantage_point2": "Agilität: Unsere schlanken Prozesse ermöglichen es uns, schnell auf sich ändernde Anforderungen zu reagieren.",
+    "advantage_point3": "Personalisierter Service: Wir bieten jedem Kunden individuelle Aufmerksamkeit, um sicherzustellen, dass Ihre Vision verwirklicht wird.",
+    "advantage_point4": "Wettbewerbsfähige Preise: Unsere schlanke Struktur ermöglicht es uns, hochwertige Dienstleistungen zu unschlagbaren Preisen anzubieten.",
+    "advantage_point5": "24/7 Support: Unser Engagement für Sie endet nicht mit der Projektauslieferung. Wir sind rund um die Uhr für Sie da.",
+    "how_we_work_title": "Wie wir arbeiten",
+    "how_we_work_step1_title": "Kontaktieren Sie uns",
+    "how_we_work_step1_desc": "Nehmen Sie jederzeit Kontakt auf – unser Team ist 24/7 verfügbar.",
+    "how_we_work_step2_title": "Entdeckungsgespräch",
+    "how_we_work_step2_desc": "Wir planen ein virtuelles Meeting, um Ihre Ziele und Anforderungen zu verstehen.",
+    "how_we_work_step3_title": "Maßgeschneidertes Angebot",
+    "how_we_work_step3_desc": "Erhalten Sie einen individuellen Plan mit transparenten Preisen und Zeitplänen.",
+    "how_we_work_step4_title": "Nahtlose Umsetzung",
+    "how_we_work_step4_desc": "Unser Expertenteam setzt Ihr Projekt um und hält Sie auf dem Laufenden.",
+    "how_we_work_step5_title": "Fortlaufender Support",
+    "how_we_work_step5_desc": "Nach dem Start bieten wir kontinuierlichen Support, um nachhaltigen Erfolg sicherzustellen.",
+    "faq_title": "Häufig gestellte Fragen",
+    "faq_q1": "Wie kann Ihre Neuheit meinem Projekt zugutekommen?",
+    "faq_a1": "Unser frischer Ansatz bedeutet, dass wir hoch motiviert sind, zu beeindrucken und exzellent zu sein. Wir begrüßen innovative Lösungen und sind flexibel, um uns an Ihre einzigartigen Bedürfnisse anzupassen, wobei wir persönlichen Service und Engagement bieten, die den Erfolg vorantreiben.",
+    "faq_q2": "Bieten Sie wirklich 24/7 Support an?",
+    "faq_a2": "Absolut! Wir verstehen, dass Fragen und Probleme jederzeit auftreten können. Unser Team ist immer bereit, Ihnen zu helfen und Unterbrechungen Ihres Betriebs zu minimieren.",
+    "faq_q3": "Wie halten Sie hohe Qualität bei wettbewerbsfähigen Preisen aufrecht?",
+    "faq_a3": "Durch effizientes Arbeiten und die Nutzung der neuesten Technologien reduzieren wir Gemeinkosten, ohne die Qualität zu beeinträchtigen. Unser Fokus liegt darauf, Ihnen Wert zu liefern.",
+    "faq_q4": "Auf welche Branchen sind Sie spezialisiert?",
+    "faq_a4": "Unser vielseitiges Team verfügt über Expertise in verschiedenen Branchen, einschließlich Finanzen, Gesundheitswesen, E-Commerce und mehr. Wir sind anpassungsfähig und freuen uns darauf, die einzigartigen Herausforderungen Ihres Sektors zu verstehen und zu meistern."
   }
 }
